Refactor the project
 - Use mcp.server.fastmcp library
 - Add sse and stdio config examples
 - Remove healtcheck from containerfile
 - Support only `make run` in Makefile
 - Update README.md

--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 # Testing Farm API Configuration
 # Replace 'your_api_token_here' with your actual Testing Farm API token
-TESTING_FARM_API_TOKEN=your_api_token_here
+TESTING_FARM_API_TOKEN=<testing-farm-api-key>
 
 # Testing Farm API URLs (defaults are usually correct)
 TESTING_FARM_API_URL=https://api.testing-farm.io/v0.1
@@ -8,26 +8,8 @@ TESTING_FARM_ARTIFACTS_URL=https://artifacts.dev.testing-farm.io
 
 # MCP Transport Configuration
 # Transport mode: 'stdio' for subprocess communication or 'sse' for web service
-MCP_TRANSPORT=stdio
+MCP_TRANSPORT=sse
 
 # Port for SSE transport (only used when MCP_TRANSPORT=sse)
 MCP_PORT=8000
-
-# Logging Configuration
-PYTHONUNBUFFERED=1
-
-# Examples of different configurations:
-# 
-# For stdio transport (default):
-# MCP_TRANSPORT=stdio
-# 
-# For SSE transport on default port:
-# MCP_TRANSPORT=sse
-# MCP_PORT=8000
-#
-# For SSE transport on custom port:
-# MCP_TRANSPORT=sse
-# MCP_PORT=8001
-#
-# Note: When using SSE transport, the MCP client will connect to:
-# http://localhost:${MCP_PORT}
+MCP_HOST=127.0.0.1
